Fixed horizontal overflow bug found in twitter bootstrap 3.x for container-fluid

--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -14,13 +14,17 @@
 }*/
 
 
+/*See http://stackoverflow.com/questions/23768152/using-container-fluid-within-bootstrap-cause-horizontal-scrollbar*/
+body {
+   overflow-x: hidden;
+}
 
 .intro-group {
 	margin-top: 50%;
 	margin-left: 10%;
 	padding: 10%;
 	background-color: rgba(0, 0, 0, 0.5) !important;
-	width:150%;
+	width:160%;
 	height:100%;
 	border: #9e3 5px solid;
 	border-radius: 5%;
